Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Revisited the localroles management UI.
- Added the beginning of a document on
  "HOWTO use the search capabilities of CPS".
Bug fixes:
~~~~~~~~~~
- Improved coding style in cpsinstall.py.
- #699: Fixed workflow of workspaces so that they only manage 'View'.
- #388: better fr/en translations for virtual groups labels (role:Anonymous and
  role:Authenticated)
- #307: Local roles management empty user searching ; there was no search limit
  when searching for members/groups
- #492: Removing local roles to role:Anonymous unblocked roles acquisition
- removed the textarea width set to 100% in nuxeo_css1.css.dtml (this causes a
  layout bug in firefox when displaying tooltips)
- Fixed the way CMFCalendarToolPatch.py was getting the translation_service
  tool. This has the effect to fix CPSSkins unit tests.
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- Fixed the url displayed in exportRssContentBox (was exportRSSContentBox
  instead of exportRssContentBox)
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Don't use strings for permission names in the installer.
- Added an example display method for formatting CPSPortlets content items.
- Replaced Localizer by TranslationService.
- Moved computeContributors from CPSDocument to the utils module.