@@ -28,3 +28,4 @@ New internal features:
 - Added an example display method for formatting CPSPortlets content items.
 - Replaced Localizer by TranslationService.
 - Moved computeContributors from CPSDocument to the utils module.
+- Made the modify transition title more readable
